# newstorage

./: .gitignore  CMakeLists.txt  README.md
libbar/: CMakeLists.txt
libfoo/: CMakeLists.txt
main/: CMakeLists.txt
test/: CMakeLists.txt
test/testfoo/: CMakeLists.txt  testfoo.cpp
