CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(MyProject)

SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(CMAKE_INSTALL_PREFIX build)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/build)


set(MY_DEBUG_OPTIONS /MTd)
set(MY_RELEASE_OPTIONS /MT)

add_compile_options(
  "$<$<CONFIG:Debug>:${MY_DEBUG_OPTIONS}>"
  "$<$<CONFIG:RelWithDebInfo>:${MY_RELEASE_OPTIONS}>"
  "$<$<CONFIG:Release>:${MY_RELEASE_OPTIONS}>"
  "$<$<CONFIG:MinSizeRel>:${MY_RELEASE_OPTIONS}>"
)

ADD_SUBDIRECTORY(main)
ADD_SUBDIRECTORY(test)
ADD_SUBDIRECTORY(libfoo)
ADD_SUBDIRECTORY(libbar)
